Tests/CompilerTests/negative/trait-refinement.expected
negative/trait-refinement.hylo:28.1-6: error: no given instance of 'Base<B<T>>' in this scope
given <T> B<T> is Derived {}
~~~~~
